* neither the Hibernate 2.1 support nor the Hibernate 3.x support is included in "spring.jar" anymore

Package org.springframework.beans
* removed deprecated "getBeanDefinitionNames(type)" method from ListableBeanFactory and BeanFactoryUtils
* added "createBean" and "instantiateBean" methods to AutowireCapableBeanFactory interface

Package org.springframework.core
* introduced TaskExecutor abstraction, as strategy interface for the execution of Runnables
* added SyncTaskExecutor and SimpleAsyncTaskExecutor as simple default implementations of the TaskExecutor interface

Package org.springframework.context
* added "getAutowireCapableBeanFactory()" accessor to ApplicationContext interface, for direct access without casting
* refined AbstractApplicationContext's lifecycle behavior to properly ignore repeated "close()" calls
* moved DefaultListableBeanFactory's cleanup on "preInstantiateSingletons()" behavior to AbstractApplicationContext
* reworked SimpleApplicationEventMulticaster to delegate to a TaskExecutor, using a SyncTaskExecutor as default

Package org.springframework.jms
* added SimpleMessageListenerContainer mechanism for async JMS message reception via the plain JMS MessageConsumer API
* added ServerMessageListenerContainer mechanism for async JMS message reception via the JMS ServerSessionPool API

Package org.springframework.orm
* added support for the Java Persistence API (JPA) preview, in the form of the "org.springframework.orm.jpa" package
* JdoTransactionManager does explicit "isActive()" check before attempting a rollback, to avoid illegal state exception
* HibernateTransactionManager autodetects Hibernate 3.1 to support its native transaction timeout
* upgraded IdTransferringMergeEventListener to Hibernate 3.1 (which changed its listener API in an incompatible fashion)

Package org.springframework.scheduling
* added TimerTaskExecutor adapter for accessing a "java.util.Timer" through the TaskExecutor interface