@@ -16,23 +16,24 @@
 
 package org.springframework.beans;
 
+import java.util.Arrays;
+
+import org.springframework.util.ObjectUtils;
+
 /**
  * Exception thrown on an attempt to set the value of a property
- * that isn't writable, because there's no setter method.
+ * that isn't writable, because there's no setter method. In some
+ * situations alternatives are presented.
  *
  * @author Rod Johnson
  */
 public class NotWritablePropertyException extends InvalidPropertyException {
 
-	/**
-	 * Create a new NotWritablePropertyException.
-	 * @param beanClass the offending bean class
-	 * @param propertyName the offending property
-	 */
-	public NotWritablePropertyException(Class beanClass, String propertyName) {
-		super(beanClass, propertyName,
-				"Bean property '" + propertyName + "' is not writable or has an invalid setter method: " +
-				"Does the parameter type of the setter match the return type of the getter?");
+	private String[] possibleMatches = null;
+	
+	public NotWritablePropertyException(Class beanClass, String propertyName, String[] possibleMatches) {
+		super(beanClass, propertyName, generateMessage(beanClass, propertyName, possibleMatches));
+		this.possibleMatches = possibleMatches;
 	}
 
 	/**
@@ -45,5 +46,35 @@ public class NotWritablePropertyException extends InvalidPropertyException {
 	public NotWritablePropertyException(Class beanClass, String propertyName, String msg, Throwable ex) {
 		super(beanClass, propertyName, msg, ex);
 	}
+	
+	private static String generateMessage(Class beanClass, String propertyName, String[] possibleMatches) {		
+		StringBuffer buffy = new StringBuffer();
+		buffy.append("Bean property '");
+		buffy.append(propertyName);
+		buffy.append("' is not writable or has an invalid setter method. ");
+		
+		if (ObjectUtils.isEmpty(possibleMatches)) {
+			buffy.append("Does the parameter type of the setter match the return type of the getter?");
+		} else {
+			buffy.append("Did you mean ");
+			for (int i = 0; i < possibleMatches.length; i++) {
+				buffy.append('\'');
+				buffy.append(possibleMatches[i]);
+				
+				if (i < possibleMatches.length - 2) {
+					buffy.append("', ");
+				} else if (i == possibleMatches.length - 2){
+					buffy.append("', or ");
+				}			
+	 		}
+			buffy.append("'?");
+		}
+		return buffy.toString();
+	}
+
+	public String[] getPossibleMatches() {
+		return possibleMatches;
+	}
+	
 
 }
